Added scss foundation, <Select />; <Button; <TextInput />, and add route

--- a/src/sass/abstracts/_colors.scss
+++ b/src/sass/abstracts/_colors.scss
@@ -1,7 +1,7 @@
 $colors-dark: (
    background: (
-      '400': hsl(210 13% 9%),
-      '500': hsl(210 13% 12%),
+      '400': hsl(210 30% 8%),
+      '500': hsl(210 30% 13%),
    ),
 
    text: (
@@ -11,8 +11,23 @@ $colors-dark: (
    ),
 
    button: (
-      '400': hsl(142 85% 35%),
-      '500': hsl(142 85% 40%),
+      '400': hsl(142 85% 26%),
+      '500': hsl(142 85% 34%),
+   ),
+
+   input: (
+      '400': hsl(210 3% 5%),
+      '500': hsl(210 3% 12%),
+      'border-hov': hsl(220 84% 33%),
+   ),
+
+   border: (
+      'muted': hsl(0 0 50% / 0.44),
+   ),
+
+   select: (
+      '400': hsl(220 5% 12%),
+      '500': hsl(216 5% 19%),
    )
 );
 
