--- a/src/sass/components/index.scss
+++ b/src/sass/components/index.scss
@@ -1,3 +1,7 @@
 @forward './navbar';
+@forward './misc';
+
+@forward './Modules/dropdown';
 
 @forward './Interactibles/button';
+@forward './Interactibles/input';
