--- a/src/sass/base/_media-queries.scss
+++ b/src/sass/base/_media-queries.scss
@@ -8,4 +8,16 @@
             }
         }
    }
+
+    *[data-flex-collapse] {
+        flex-direction: column !important;
+    }
+
+    *[data-flex-collapse='center'] {
+        align-items: center !important;
+    }
+
+    *[data-grid-collapse] {
+        grid-template-columns: 1fr !important;
+    }
 }
