--- a/src/sass/base/_media-queries.scss
+++ b/src/sass/base/_media-queries.scss
@@ -9,6 +9,10 @@
         }
    }
 
+    .main-container {
+        padding: $mainContainer-mobile-padding;
+    }
+
     *[data-flex-collapse] {
         flex-direction: column !important;
     }
