--- a/src/sass/abstracts/_colors.scss
+++ b/src/sass/abstracts/_colors.scss
@@ -2,6 +2,7 @@ $colors-dark: (
    background: (
       '400': hsl(210 30% 8%),
       '500': hsl(210 30% 13%),
+      '600': hsl(210 30% 18%),
    ),
 
    text: (
@@ -13,6 +14,21 @@ $colors-dark: (
    button: (
       '400': hsl(142 85% 26%),
       '500': hsl(142 85% 34%),
+   ),
+
+   tag: (
+      'default': hsl(220 97% 45% / 0.33),
+      'text-default': hsl(220 97% 65%),
+   ),
+
+   red: (
+      '400': hsl(0 84% 52%),
+      '500': hsl(0 84% 58%),
+   ),
+
+   blue: (
+      '400': hsl(210 84% 42%),
+      '500': hsl(210 84% 48%),
    ),
 
    input: (
