--- a/src/sass/abstracts/_tokens.scss
+++ b/src/sass/abstracts/_tokens.scss
@@ -5,6 +5,7 @@ $border-radius-cubed: 8px;
 
 // Main
 $clr-body: var(--clr-background-400);
+$mainContainer-mobile-padding: 0.25em 0.75em;
 
 // Navbar
 $clr-navbar: var(--clr-background-500);
@@ -12,6 +13,10 @@ $clr-navbar: var(--clr-background-500);
 // Selects
 $select-background: var(--clr-select-400);
 $select-border-color: var(--clr-select-500);
+
+// User
+$userImage-width: 14em;
+$userImage-background: black;
 
 // Dropdowns
 $dropdown-padding: 0.25em 0;
@@ -32,6 +37,14 @@ $button-transition-default:
     background-color 95ms ease-in-out, 
     color 95ms ease-in-out, 
     transform 95ms ease-in-out;
+
+$button-background-red: var(--clr-red-400);
+$button-background-red-on-hov: var(--clr-red-500);
+
+$button-background-blue: var(--clr-blue-400);
+$button-background-blue-on-hov: var(--clr-blue-500);
+
+$button-thick-padding: 0.5em 0.75em;
 
 // Input
 $input-padding-default: 0.5em 0.65em;
