--- a/src/sass/components/Interactibles/_input.scss
+++ b/src/sass/components/Interactibles/_input.scss
@@ -14,6 +14,7 @@
 
         transform: translate(-50%, -50%);
         transition: transform 95ms ease-in-out;
+        pointer-events: none;
 
         z-index: 999;
     }
@@ -30,4 +31,10 @@
         background-color: var(--clr-background-400);
     }
 
+}
+
+.exercise-input-container {
+    .exercise__numerics .input-container {
+        max-width: 12ch;
+    }
 }
