--- a/src/sass/components/Modules/_dropdown.scss
+++ b/src/sass/components/Modules/_dropdown.scss
@@ -3,7 +3,9 @@
 .dropdown {
     padding: $dropdown-padding;
     background-color: $dropdown-background;
-    border: 1px solid $dropdown-border-color;
+    border: 2px solid $dropdown-border-color;
+
+    z-index: 999;
 
     &:is([data-dropdown-state='false']) {
         display: none;
